[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/base-particle.png" type="Texture" id=1]
[ext_resource path="res://weapon/Cannonball.gd" type="Script" id=2]
[ext_resource path="res://vfx/ExplosionParticles.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Cannonball" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="HitDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetectionArea"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ExplosionParticles" parent="." instance=ExtResource( 3 )]

[node name="CleanupTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="area_entered" from="HitDetectionArea" to="." method="_on_HitDetectionArea_area_entered"]
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]
